fix traits styling for scrollbar

--- a/5eShaped/precompiled/5eShaped.scss
+++ b/5eShaped/precompiled/5eShaped.scss
@@ -1814,17 +1814,30 @@ textarea {
 }
 
 .sheet-background-text,
-.sheet-traits-text {
+.sheet-trait {
   display: block;
-  line-height: 1.1;
   overflow-x: hidden;
   overflow-y: auto;
 }
 .sheet-background-text {
+  line-height: 1.1;
   max-height: 4.2em;
 }
-.sheet-traits-text {
-  max-height: 5.35em;
+.sheet-trait {
+  max-height: 5.5em;
+  span {
+    line-height: 1.1;
+  }
+}
+
+.sheet-slide-input-pc {
+  &:checked ~ div {
+    .sheet-trait {
+      span {
+        line-height: 1.15;
+      }
+    }
+  }
 }
 
 
